syntax = "proto3";

package apidocs;

import "google/api/annotations.proto";

option go_package = "../apidocs";

service GoodsService {
    //生鲜模块首页商品分类、轮播图、促销商品展示
    rpc FreshGoodsIndex (FreshGoodsIndexRequest) returns (FreshGoodsIndexResponse) {
        option (google.api.http) = {
            get: "/api/v1/goods/freshGoodsIndex"
        };
    }

    //获取商品详情
    rpc GetGoodsDetail (GoodsDetailRequest) returns (GoodsDetailResponse) {
        option (google.api.http) = {
            get: "/api/v1/goods/goodsDetail/{goods_sku_id}"
        };
    }
}

// 全部商品分类、轮播图、促销商品展示
message FreshGoodsIndexRequest {
}

message FreshGoodsIndexResponse {
    repeated GoodsType goods_types = 1;
    repeated IndexGoodsBanner index_goods_banners = 2;
    repeated IndexPromotionBanner index_promotion_banners = 3;
    map<string, IndexTypeGoodsBanners> goods_maps = 4;
}

// 商品详情
message GoodsDetailRequest {
    int32 goods_sku_id = 1;
}

message GoodsDetailResponse {
    // 商品详情
    GoodsSku goods_sku = 1;
    // 新品推荐
    repeated GoodsSku goods_skus = 2;
}

// 商品分类
message GoodsType {
    int32 Id = 1;
    string Name = 2;
    string Logo = 3;
    string Image = 4;
}

// 轮播图
message IndexGoodsBanner {
    int32 Id = 1;
    int32 GoodsSkuId = 2;
    string Image = 3;
    int32 Index = 4;
}

// 促销商品展示
message IndexPromotionBanner {
    int32 Id = 1;
    string Name = 2;
    string Url = 3;
    string Image = 4;
    int32 Index = 5;
}

// 首页分类商品展示表
message IndexTypeGoodsBanner {
    int32 Id = 1;
    int32 GoodsTypeId = 2;
    int32 GoodsSkuId = 3;
    int32 DisplayType = 4;
    int32 Index = 5;
}

message IndexTypeGoodsBanners {
    repeated IndexTypeGoodsBanner items = 1;
}

// 商品详情页
message GoodsSku {
    int32 Id = 1;
    int32 GoodsId = 2;
    int32 GoodsTypeId = 3;
    string Name = 4;
    string Desc = 5;
    int32 Price = 6;
    string Unite = 7;
    string Image = 8;
    int32 Stock = 9;
    int32 Sales = 10;
    int32 Status = 11;
    string Time = 12;
    Goods Goods = 13;
}

// 商品SPU
message Goods {
    int32 Id = 1;
    string Name = 2;
    string Detail = 3;
}
